kb(java/sysdesign): add 5 topics (java-language-basics, oop-design-and-principles, jvm-internals-and-classloading, garbage-collection-algorithms, java-memory-model-and-concurrency) + restructure none